christmas-shop/src/js/components/header/header.module.scss
@use '../../../styles/_mixins.scss';
@use '../../../styles/_variables.scss';

.header {
  width: 100%;
  background-color: variables.$static-white;
  display: flex;
  justify-content: space-between;
  padding: 10.8px 82px;

  @media screen and (width <= 1440px) {
    & {
      padding: 10.8px 5.69vw;
    }
  }

  @media screen and (width <= 768px) {
    & {
      padding: 10.8px 8px;
    }
  }
}

.logo {
  display: flex;
  padding: 8px 20px;
  gap: 8.7px;
  align-items: center;
  cursor: url('../../../img/svg/pointinghand.svg'), pointer;
  transition: all 0.3s ease;

  .logoText {
    @include mixins.action_small;

    transition: all 0.3s ease;
  }

  &:hover {
    background-color: variables.$primary10;
    border-radius: 12px;

    .logoText {
      color: variables.$primary;
    }
  }
}

.logoDivImg {
  object-fit: cover;
}

.logoImg {
  object-fit: cover;
  width: 100%;
}

.nav {
  @media screen and (width <= 768px) {
    position: fixed;
    top: 64px;
    left: 0;
    background-color: variables.$static-white;
    width: 100%;
    height: calc(100dvh - 64px);
    transform: translateX(999px);
    transition: all 0.3s ease-in;
  }
}

.navList {
  height: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  gap: 7px;
  align-items: center;

  @media screen and (width <= 768px) {
    & {
      flex-direction: column;
      justify-content: center;
    }
  }
}

.navItem {
  @include mixins.action_small;

  list-style-type: none;

  .navLink {
    cursor: url('../../../img/svg/pointinghand.svg'), pointer;
    // padding: 12px 20.4px;
    // transition: all 0.3s ease;

    &.active span {
      color: variables.$primary;
      background-color: variables.$primary10;
      border-radius: 12px;
      cursor: default;
    }

    span {
      padding: 12px 20.4px;
      transition: all 0.3s ease-in-out;
    }
  }

  &:hover {
    color: variables.$primary;

    .navLink span {
      background-color: variables.$primary10;
      border-radius: 12px;
    }
  }

  @media screen and (width <= 768px) {
    @include mixins.action_large;

    display: flex;
    width: 100%;
    justify-content: center;
    position: relative;

    .navLink {
      text-align: center;
      flex: 1;
      position: relative;
      z-index: 10;

      &:hover {
        background-color: transparent;

        span {
          background-color: variables.$primary10;
          border-radius: 12px;
        }
      }
    }
  }
}

.burgerButton {
  padding: 7px 10px;
  display: none;
  position: relative;
  width: 40px;
  height: 40px;
  transition: all 0.3s ease;
  cursor: url('../../../img/svg/pointinghand.svg'), pointer;

  hr {
    width: 20px;
    background-color: variables.$dark;
    transform: rotate(0);
    transition: all 0.3s ease;
  }

  &.active {
    hr {
      position: absolute;
    }
    hr:nth-child(1) {
      transform: rotate(45deg);
    }
    hr:nth-child(2) {
      transform: rotate(-45deg);
    }
  }

  @media screen and (width <= 768px) {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 8px;

    &:hover {
      background-color: variables.$primary10;
      border-radius: 12px;
    }
  }
}

